# LetRecovery

./: README.md
.github/workflows/: main.yml
PE端/src/: app.rs
PE端/src/core/: disk.rs  wimgapi.rs
desktop/: Cargo.toml  build.rs
desktop/src/: app.rs  main.rs
desktop/src/core/: app_config.rs  bcdedit.rs  bitlocker.rs  cabinet.rs  config.rs  disk.rs  dism.rs  dism_cmd.rs  driver.rs  fveapi.rs  gho_password.rs  ghost.rs  hardware_info.rs  image_verify.rs  install_config.rs  iso.rs  mod.rs  nvidia_driver.rs  pe.rs  quick_partition.rs  registry.rs  system_info.rs  system_utils.rs  wimgapi.rs  wimlib.rs
desktop/src/download/: aria2.rs  config.rs  manager.rs  mod.rs  pe_url_resolver.rs  server_config.rs
desktop/src/ui/: about.rs  advanced_options.rs  download_progress.rs  easy_mode.rs  embedded_assets.rs  hardware_info.rs  install_progress.rs  mod.rs  online_download.rs  system_backup.rs  system_install.rs
desktop/src/ui/tools/: actions.rs  appx.rs  batch_format.rs  bitlocker.rs  dialogs.rs  driver.rs  gho_password.rs  image_verify.rs  mod.rs  network.rs  nvidia_uninstall.rs  partition_copy.rs  quick_partition.rs  software.rs  time_sync.rs  types.rs  version_detect.rs
desktop/src/utils/: cmd.rs  command.rs  encoding.rs  i18n.rs  logger.rs  mod.rs  path.rs  privilege.rs  reboot.rs
pe/: Cargo.toml  build.rs
pe/src/: app.rs  main.rs
pe/src/core/: bcdedit.rs  cabinet.rs  config.rs  disk.rs  dism.rs  dism_exe.rs  dismapi.rs  driver.rs  ghost.rs  mod.rs  registry.rs  system_utils.rs  wimgapi.rs
pe/src/ui/: advanced_options.rs  mod.rs  progress.rs
pe/src/utils/: cmd.rs  encoding.rs  mod.rs  path.rs
官网/: index.html  package-lock.json  package.json  vite.config.ts
官网/src/: App.tsx  index.css
官网/src/components/icons/: CheckCircle.tsx  CircleHalf.tsx  index.ts
官网/src/components/layout/: Banner.tsx  Footer.tsx  Header.tsx  index.ts
官网/src/components/ui/: alert.tsx  command.tsx  dropdown-menu.tsx
官网/src/hooks/: useTheme.tsx
官网/src/pages/: Home.tsx  License.tsx  QQGroup.tsx  index.ts
正常系统端/: Cargo.toml  build.rs
正常系统端/src/: main.rs
正常系统端/src/core/: wimgapi.rs
正常系统端/src/ui/: about.rs  progress.rs
正常系统端/src/ui/tools/: actions.rs  mod.rs
