[package]
name = "letrecovery-pe"
version = "2026.2.6"
edition = "2021"
authors = ["NORMAL-EX"]
description = "LetRecovery PE安装助手"

[dependencies]
# GUI
eframe = { version = "0.31", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.31"

# 序列化
serde = { version = "1", features = ["derive"] }

# Windows API
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_SystemInformation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Shutdown",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Registry",
] }

# wimgapi.dll / setupapi.dll 动态加载
libloading = "0.8"

# 编码转换
encoding_rs = "0.8"

# 日志
log = "0.4"
env_logger = "0.11"

# 错误处理
anyhow = "1"
thiserror = "1"

# 其他工具
walkdir = "2"
image = "0.25"

[build-dependencies]
winres = "0.1"

[[bin]]
name = "LetRecoveryPE"
path = "src/main.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
